# armstrong_collab

armstrong-armstrongv3/: README.md  final_financial_plan_report.md  pyproject.toml  report.md  requirements.txt  verbose_crew_log.md  verbose_crew_log1.md
armstrong-armstrongv3/outputs/: RetirementPlannerTask.json  asset_liability_analysis_task.json  client_profiling_task.json  data_extraction_task.json  final_financial_plan_report.md  goal_integration_task.json  goal_quantification_task.json  goal_strategy_task.json
armstrong-armstrongv3/src/armstrong/: crew.py  main.py  models.py  token_meter.py
armstrong-armstrongv3/src/armstrong/config/: agents.yaml  tasks.yaml
armstrong-armstrongv3/src/armstrong/tools/: custom_tool.py  mcp_clients.py  mcp_server_tools.py  testing.py
