[project]
name = "armstrong"
version = "0.1.0"
description = "armstrong using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "mcp[cli]>=1.9.0",
    "pymupdf>=1.25.5",
]

[project.scripts]
armstrong = "armstrong.main:run"
run_crew = "armstrong.main:run"
train = "armstrong.main:train"
replay = "armstrong.main:replay"
test = "armstrong.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
